# librdkafka-wrapper

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  combined-test.c  confluent.repo  consumer-test-dev.c  consumer-test.c  install-packages.bat  install.sh  install_and_valgrind.sh  install_and_valgrind_prod.sh  librdkafka-wrapper.c  librdkafka-wrapper.def  librdkafka-wrapper.h  make.sh  messageSchema.json  oekafka-wrapper.c  oekafka-wrapper.def  oekafka-wrapper.h  packages.config  processedIdSchema.json  producer-test.c  qa-dhlparcel-co-uk.cer  test_consumer.sh  test_consumer_dev.sh  test_producer.sh  valgrind.supp  wrapper-test.c
